# SGProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
Application/: CMakeLists.txt
Application/Basic/: BaseApplication.cpp  BasicApplication.cpp  CMakeLists.txt  OpenGLApplication.cpp  VulkanApplication.cpp
Application/Empty/: CMakeLists.txt  EmptyApplication.cpp
Assets/Models/: nanosuit.mtl  planet.mtl  rock.mtl
Assets/Shaders/: AsteroidsShaderVS.glsl  LampShaderFS.glsl  LightShaderFS.glsl  LightShaderVS.glsl  ModelShaderFS.glsl  ModelShaderGS.glsl  ModelShaderVS.glsl  NormalShaderFS.glsl  NormalShaderGS.glsl  NormalShaderVS.glsl  PlanetShaderFS.glsl  PlanetShaderVS.glsl  SimpleDepthShaderVS.glsl  compile.bat  compile.sh
Config/: SGConfig.h  SGConfig.h.in
SGProject/: CMakeLists.txt  SGProject.cpp  SGProject.h
Shaders/: shader.fs  shaderFS.glsl
src/: CMakeLists.txt  SGDefine.h  SGMathDefine.h  SGModules.h  SGSignal.h
src/Config/: SGConfig.h
src/SGApplication/: CMakeLists.txt  SGApplication.cpp  SGApplication.h  SGBaseApplication.cpp  SGBaseApplication.h  SGOpenGLApplication.cpp  SGOpenGLApplication.h  SGVulkanApplication.cpp  SGVulkanApplication.h
src/SGCommon/: CMakeLists.txt  SGTime.cpp
src/SGEventManager/: CMakeLists.txt  SGEventManager.cpp  SGEventManager.h  SGSystemEvent.cpp  SGSystemEvent.h  SGWorkerThread.cpp  SGWorkerThread.h
src/SGFileManager/: CMakeLists.txt  SGFileManager.cpp  SGFileManager.h  SGJsonLoader.cpp  SGJsonLoader.h  SGTextureLoader.cpp  SGTextureLoader.h
src/SGGameLogic/: CMakeLists.txt  SGGameLogic.cpp
src/SGGraphics/: CMakeLists.txt  SGCamera.cpp  SGCamera.h  SGCubeData.h  SGGraphicsManager.cpp  SGGraphicsManager.h  SGLight.h  SGMaterial.h  SGMaterialData.h  SGMesh.cpp  SGMesh.h  SGModel.cpp  SGModel.h  SGShader.cpp  SGShader.h  SGTexture.h  SGTextureLoader.cpp  SGVertex.h
src/SGGraphicsManager/: CMakeLists.txt  SGCamera.h  SGCubeData.h  SGGraphicsManager.cpp  SGGraphicsManager.h  SGLight.h  SGMaterial.h  SGMaterialData.h  SGOpenGLGraphicsManager.cpp  SGOpenGLGraphicsManager.h  SGShader.h  SGVulkanGraphicsManager.cpp  SGVulkanGraphicsManager.h  Shader.h  material_data.txt
src/SGInputManager/: CMakeLists.txt  SGInputManager.cpp  SGInputManager.h
src/SGInterface/: SGIApplication.h  SGIEventCallback.h  SGIEventData.h  SGIRuntimeModule.h  SGISingleton.h  SGMesh.h  SGSingleton.h
src/SGLog/: CMakeLists.txt  SGLog.cpp  SGLog.h
src/SGMemoryManager/: CMakeLists.txt  SGMemoryMacros.h  SGMemoryManager.cpp  SGMemoryManager.h  SGMemoryPool.cpp  SGMemoryPool.h
src/SGMultiThread/: CMakeLists.txt  SGMultiThread.cpp  SGProcess.cpp  SGProcess.h  SGProcessManager.cpp  SGProcessManager.h  SGWorkerThread.h
src/SGOpenGLGraphicsManager/: CMakeLists.txt  SGOpenGLGraphicsManager.cpp  SGOpenGLGraphicsManager.h
src/SGProcessManager/: CMakeLists.txt  SGProcess.cpp  SGProcess.h  SGProcessManager.cpp  SGProcessManager.h
src/SGProject/: CMakeLists.txt  SGProject.cpp  SGProject.h
src/SGSceneManager/: CMakeLists.txt  SGSceneManager.cpp
src/SGTime/: CMakeLists.txt  SGTime.cpp  SGTime.h
src/SGTimeFactory/: CMakeLists.txt  SGTime.cpp  SGTime.h  SGTimeFactory.cpp  SGTimeFactory.h
src/SGTimeManager/: CMakeLists.txt  SGTime.cpp  SGTime.h  SGTimeManager.cpp  SGTimeManager.h
src/SGVulkanGraphicsManager/: CMakeLists.txt  SGVulkanGraphicsManager.cpp  SGVulkanGraphicsManager.h
src/Utils/: AssertFault.cpp  CMakeLists.txt  Fault.cpp  Fault.h  GenericObjectFactory.h  ThreadPool.h  concurrent_queue.h
test/: CMakeLists.txt  event_test.cpp  glm_test.cpp  json_test.cpp  pthread_test.cpp  sgtime_test.cpp  sqlite_test.cpp
